<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/loading_container">

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp" />

        <RelativeLayout
            android:id="@+id/loading_error_container"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/error_message"
                android:textAlignment="center" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/error_message"
                android:layout_centerHorizontal="true"
                android:text="@string/try_again"
                android:textColor="#fff" />
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>