...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_up_black_24px"
        android:contentDescription="image" />

    <TextView
        android:id="@+id/kid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:tag="kid"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/comment"
...
