<resources>
    <string name="app_name">Hacker News Reader</string>
    <string name="error_message">Unable to load news</string>
    <string name="try_again">try again</string>
    <string name="comment">Comment</string>
    <string name="no_comment">No Comment</string>
</resources>
